# redstone-designer

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix
assets/local/shaders/: line_material.wgsl
src/: block.rs  block_picker.rs  camera.rs  constants.rs  cursor.rs  int_vec3.rs  lines.rs  main.rs  redstone.rs  user_input.rs  util.rs
src/block/: behavior.rs  block_state.rs  bounding_box.rs  mod.rs  placing_block.rs  spawn_block.rs
src/block_state/: mod.rs
src/timeline/: mod.rs  world_state.rs
