[package]
name = "redstone_designer"
version = "0.1.0"
edition = "2021"

# NOTE: remove "dynamic" feature from bevy when compiling a release build to
# avoid the need to bundle libbevy_dylib
[dependencies]
anyhow = "1.0.66"
bevy = { version = "0.9.0", features = ["dynamic", "wayland"] }
bevy_rapier3d = { version = "0.18.0", features = ["parallel", "wasm-bindgen"] }
minecraft-assets = "0.0.6"

[dev-dependencies]
maplit = "1.0.2"

# Get a fork of bevy_rapier3d that is compatible with bevy 0.9
[patch.crates-io]
bevy_rapier3d = { git = "https://github.com/devil-ira/bevy_rapier.git", branch = "bevy-0.9" }

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code
[profile.dev.package."*"]
opt-level = 3
